--- a/heartdisease.ipynb
+++ b/heartdisease.ipynb
@@ -658,41 +658,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## Coding for z-score\n",
-    "#theta= np.ones((1,len(df_train_values.columns)-1), dtype=int) # Gives the length   \n",
-    "#w_transp= np.transpose(w)\n",
-    "#w_transp=np.insert(w_transp,0,0, axis=0)\n",
-    "#print(w_transp)\n",
-    "#b=1\n",
-    "#train_values=df_train_values.values\n",
-    "# print(train_values)\n",
-    "\n",
-    "\n",
-    "## for loop\n",
-    "##z= np.dot(w_transp,train_values)+b\n",
-    "#for count in len(df_train_values.index) \n",
-    "# for index, row in df_train_values.iterrows()\n",
-    "  # +b, axis=0 \n",
-    "      \n",
-    " #z[count]=     \n",
-    "# print(df_train_values.loc[1]) # dataframe.loc gets that row\n",
-    "# z=np.transpose(w)*df_train_values[0]\n",
-    "# print(df_train_values.chest_pain_type)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 164,
    "metadata": {},
    "outputs": [],
    "source": [
     "## Rearranging the data\n",
-    "X = df_train_model.iloc[:, :-1] # X is dataframe here\n",
-    "X_all= df_train_all.iloc[:, :-1]\n",
+    "X = df_train_model.iloc[:, :-1] # X is dataframe here and model considers only significant variables according to boxplot\n",
+    "X_all= df_train_all.iloc[:, :-1] # Here all the variables are considered.\n",
     "# y = target values, last column of the data frame\n",
     "y = df_train_model.iloc[:, -1]\n",
     "y_all = df_train_all.iloc[:, -1]\n",
@@ -732,7 +704,7 @@
     "\n",
     "## Defining cost and gradient function \n",
     "\n",
-    "def cost_function(theta, x, y):\n",
+    "def cost_function(theta, x, y): # Cost for logistic regression\n",
     "    # Computes the cost function for all the training samples\n",
     "    m = x.shape[0]\n",
     "    total_cost = -(1 / m) * np.sum(\n",
@@ -809,8 +781,8 @@
     "    accuracy_all = np.mean(predicted_classes == actual_classes)\n",
     "    return accuracy_all * 100\n",
     "\n",
-    "print(accuracy(X, y.flatten()))\n",
-    "#print(accuracy_all(X_all, y_all.flatten())) # All was 2.22% better than the Model"
+    "#print(accuracy(X, y.flatten()))\n",
+    "print(accuracy_all(X_all, y_all.flatten())) # All was 2.22% better than the Model"
    ]
   },
   {
